fabric/testdata/out/ing_brexit-mgmt-test-ralmeida-default-404-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-routes":"PathSubtree(\"/\")
      -\u003e oauthTokeninfoAllScope(\"uid\") -\u003e unverifiedAuditLog(\"sub\")
      -\u003e status(404) -\u003e inlineContent(\"{\\\"title\\\":\\\"Gateway Rejected\\\",\\\"status\\\":404,\\\"detail\\\":\\\"Gateway
      Route Not Matched\\\"}\") -\u003e \u003cshunt\u003e"},"labels":{"controller-uid":"ae043f81-ecb4-4dd8-8a28-e08278e4eae8","deployment-id":"d-n8kgbacnbwvvrvjq1i4r3jwac","pipeline-id":"l-kham1wbmzaojugzy8cubi4fib"},"name":"brexit-mgmt-test-ralmeida-default-404-route","namespace":"default"},"spec":{"rules":[{"host":"brexit-mgmt-test-ralmeida.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"brexit-mgmt-test-ralmeida","servicePort":"http"},"pathType":"Implementati [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-routes: PathSubtree("/") -> oauthTokeninfoAllScope("uid")
      -> unverifiedAuditLog("sub") -> status(404) -> inlineContent("{\"title\":\"Gateway
      Rejected\",\"status\":404,\"detail\":\"Gateway Route Not Matched\"}") -> <shunt>
  creationTimestamp: "2021-06-22T16:06:57Z"
  generation: 1
  labels:
    controller-uid: ae043f81-ecb4-4dd8-8a28-e08278e4eae8
    deployment-id: d-n8kgbacnbwvvrvjq1i4r3jwac
    pipeline-id: l-kham1wbmzaojugzy8cubi4fib
  name: brexit-mgmt-test-ralmeida-default-404-route
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: brexit-mgmt-test-ralmeida
    uid: ae043f81-ecb4-4dd8-8a28-e08278e4eae8
  resourceVersion: "1357488326"
  uid: 274bb105-f15c-47fa-8dee-45f72313c3b2
spec:
  rules:
  - host: brexit-mgmt-test-ralmeida.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: brexit-mgmt-test-ralmeida
            port:
              name: http
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
